[package]
name = "rust-concurrency-patterns"
version = "0.1.0"
authors = ["David Wagner <wagdav@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
#async-std = "1.6"
tokio = { version = "0.2", features = ["full"] }
